--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "tostify": "^0.0.1"
   },
